--- a/.github/workflows/linter.yml
+++ b/.github/workflows/linter.yml
@@ -32,32 +32,10 @@ jobs:
           VALIDATE_JAVA: true
         continue-on-error: true
 
-      # Setup Python for Black
-      - name: Setup Python
-        uses: actions/setup-python@v4
-        with:
-          python-version: '3.x'
-
-      - name: Install Black
-        run: |
-          python -m pip install --upgrade pip
-          pip install black
-
-      # Run Black
-      - name: Run Black
-        run: |
-          black --check . > black-results.txt || true
 
       # Upload Super-Linter results
       - name: Upload Super-Linter Results
         uses: actions/upload-artifact@v4
         with:
           name: super-linter-results
-          path: /tmp/linter-reports  
-
-      # Upload Black results
-      - name: Upload Black Results
-        uses: actions/upload-artifact@v4
-        with:
-          name: black-results
-          path: black-results.txt
+          path: /.github/workflows  
