--- a/.github/workflows/linter.yml
+++ b/.github/workflows/linter.yml
@@ -38,4 +38,4 @@ jobs:
         uses: actions/upload-artifact@v4
         with:
           name: super-linter-results
-          path: /.github/workflows  
+          path: /linter/linter-report
